--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-# server.port = 9001
-spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3306/instaclone?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://localhost:3306/instaclone?sessionVariables=sql_mode='N0_ENGINE_SUBSTITUTION'
-spring.datasource.username=root  
-spring.datasource.password=SushantRB@123
+server.port = 9001
+# spring.jpa.hibernate.ddl-auto=update
+# # spring.datasource.url=jdbc:mysql://localhost:3306/instaclone?useSSL=false&allowPublicKeyRetrieval=true
+# spring.datasource.url=jdbc:mysql://localhost:3306/instaclone
+# spring.datasource.username=admin  
+# spring.datasource.password=admin
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.database-platform=org.hibernate.dialect.MySQLInnoDBDialect 
 # spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/instaclone
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
