--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 9091
 
-spring.datasource.url=jdbc:mysql://localhost:3306/instaclone
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/instaclone?requireSSL=false&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=SushantRB@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=update
